2019-05-04  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com

* converted a lot of int variables to long
* faster char to int conversion in klets.cpp
* countlets is much faster when providing alphabet (using unordered_map)
* countlets version bumped to 1.3
* replaced all instances of endl with \n
* countfa version bumped to 1.2
* countwin version bumped to 1.1
* seqgen version bumped to 1.3
* shuffler version bumped to 1.3

2019-05-04  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Don't bother and try to fill edges of unconnected vertices (shuffle_euler)
* Use unsigned int when not expecting negative values, size_t for sizes
* Added some internal benchmark code

2019-05-03  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Removed default entries from getopt switch
* shuffler (euler) no longer calls make_klets(), making it faster and more
memory efficient at higher k
* shuffler version bumped to 1.2
* replaced all instances of count_klets() with count_klets2(), which does not
require a vector<string> of the actual klets to do counting
* K-lets with zero counts can be ommitted from countlets output
* faster countlets counting from a stream using map<string, int>
* countlets version bumped to 1.2
* seqgen no longer requires commas to separate alphabets made of single-char
letters
* seqgen version bumped to 1.2

2019-05-02  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Made -h flag mandatory to see usage

2019-04-30  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* countwin v1.0 added

2019-04-27  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added .reserve() to a few variables
* seqgen streams new letters directly to output, not keeping entire new
sequence in memory
* seqgen version bumped to v1.1
* Dropped -p option for countlets
* countlets has a new -a option, allowing to specify alphabet to prevent
loading entire sequence into memory (at the cost of speed for higher k)