@@ -214,7 +214,7 @@ int main(int argc, char **argv) {
     cerr << "Run countwin -h to see usage.\n";
     exit(EXIT_FAILURE);
   }
-  counts = count_klets(vector<char>(seq.begin(), seq.end()), lets_uniq, k, alphlen);
+  counts = count_klets(seq, lets_uniq, k, alphlen);
   if (has_out) {
     outfile << make_row(to_string(START), to_string(STOP), counts, klets, nozero);
   } else {
@@ -235,7 +235,7 @@ int main(int argc, char **argv) {
 
     if (seq.length() < k) break;
 
-    counts = count_klets(vector<char>(seq.begin(), seq.end()), lets_uniq, k, alphlen);
+    counts = count_klets(seq, lets_uniq, k, alphlen);
 
     STOP = START + seq.length() - 1;
 
